# trinket

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/trinket/: logging.py  path.py
